# auto

./: CMakeLists.txt  ae.f90  auto.cpp  auto.f90  auto_types.f90  bvp.f90  equilibrium.f90  files.txt  homcont.f90  interfaces.f90  interfaces.h  io.f90  main.f90  maps.f90  offenders.txt  optimization.f90  periodic.f90  solvebv.f90  support.f90  test.cpp  toolboxae.f90  toolboxbv.f90
lapack/: CMakeLists.txt
