cmake_minimum_required(VERSION 2.8)
project(auto)
enable_language(Fortran)
add_subdirectory(util)
add_subdirectory(lapack)
#add_executable(fcon fcon.f)
file(GLOB autfiles "*.f90")
#set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wall -pedantic -Wextra")		
add_library(autobjects OBJECT auto.cpp ${autfiles})
add_library(auto STATIC $<TARGET_OBJECTS:autobjects>)
target_link_libraries(auto lapack)
add_executable(test test.cpp)
target_link_libraries(test auto)
